--- a/k8s/two-tier-app-deployment.yml
+++ b/k8s/two-tier-app-deployment.yml
@@ -1,11 +1,11 @@
-hzapiVersion: apps/v1
+apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: two-tier-app
   labels:
     app: two-tier-app
 spec:
-  replicas: 1
+  replicas: 2
   selector:
     matchLabels:
       app: two-tier-app
@@ -19,7 +19,7 @@ spec:
           image: amerghz/flaskapp:latest
           env:
             - name: MYSQL_HOST
-              value: "10.98.19.211"          # this is your mysql's service clusture IP, Make sure to change it with yours
+              value: "10.110.223.3"          # this is your mysql's service clusture IP, Make sure to change it with yours
             - name: MYSQL_PASSWORD
               value: "admin"
             - name: MYSQL_USER
